--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ alembic==1.13.1
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+coverage==7.5.1
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
 itsdangerous==2.2.0
@@ -16,5 +19,4 @@ python-dotenv==1.0.1
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 Werkzeug==3.0.2
-Flask-Session==0.8.0
 WTForms==3.1.2
